refactor: enhance orval configurations
